--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,6 @@ __pycache__/
 *_models/
 config_files/
 *.sh
-Sample/GGF_Higgs/
-Sample/VBF_Higgs/
+Sample/GGF_Higgs*/
+Sample/VBF_Higgs*/
 Sample/data/
